--- a/app/src/main/res/layout/fragment_c_sharp_comments_1.xml
+++ b/app/src/main/res/layout/fragment_c_sharp_comments_1.xml
@@ -19,7 +19,7 @@
             android:contentDescription="@string/codey_python_cut"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toTopOf="@+id/guideline_horizontal1"
-            app:srcCompat="@drawable/codey_python_cut" />
+            app:srcCompat="@drawable/codey_c_cut" />
 
         <TextView
             android:id="@+id/textView"
@@ -43,7 +43,7 @@
             android:contentDescription="@string/codey_python_cut"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:srcCompat="@drawable/codey_python_cut" />
+            app:srcCompat="@drawable/codey_c_cut" />
 
         <Button
             android:id="@+id/python_comments_DYK1"
@@ -159,7 +159,7 @@
             android:contentDescription="@string/codey_python_cut"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/P_Syntax_Text4"
-            app:srcCompat="@drawable/codey_python_cut" />
+            app:srcCompat="@drawable/codey_c_cut" />
 
         <TextView
             android:id="@+id/P_Comments_fix"
@@ -296,7 +296,7 @@
             android:contentDescription="@string/codey_python_cut"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/hv3"
-            app:srcCompat="@drawable/codey_python_cut" />
+            app:srcCompat="@drawable/codey_c_cut" />
 
         <TextView
             android:id="@+id/P_Comments_fix1"
