--- a/app/src/main/res/layout/fragment_c_sharp_oop_5.xml
+++ b/app/src/main/res/layout/fragment_c_sharp_oop_5.xml
@@ -76,7 +76,7 @@
 			android:contentDescription="@string/codey_python_cut"
 			app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
 			app:layout_constraintTop_toBottomOf="@+id/hv1"
-			app:srcCompat="@drawable/codey_python_cut" />
+			app:srcCompat="@drawable/codey_c_cut" />
 
 		<TextView
 			android:id="@+id/p_Comments_fix2"
@@ -100,7 +100,7 @@
 			android:contentDescription="@string/codey_python_cut"
 			app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
 			app:layout_constraintTop_toBottomOf="@+id/p_condition_Text"
-			app:srcCompat="@drawable/codey_python_cut" />
+			app:srcCompat="@drawable/codey_c_cut" />
 
 		<TextView
 			android:id="@+id/p_Comments_fix4"
@@ -124,7 +124,7 @@
 			android:contentDescription="@string/codey_python_cut"
 			app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
 			app:layout_constraintTop_toBottomOf="@+id/p_Comments_fix4"
-			app:srcCompat="@drawable/codey_python_cut" />
+			app:srcCompat="@drawable/codey_c_cut" />
 
 		<TextView
 			android:id="@+id/p_Comments_fix3"
@@ -148,7 +148,7 @@
 			android:contentDescription="@string/codey_image"
 			app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
 			app:layout_constraintTop_toBottomOf="@+id/p_Comments_fix3"
-			app:srcCompat="@drawable/codey_python" />
+			app:srcCompat="@drawable/codey_c_cut" />
 
 		<TextView
 			android:id="@+id/textView5"
